examples-manifests/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: scality-ui
  namespace: ui
  labels:
    app: scality-ui
spec:
  selector:
    app: scality-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
