examples-manifests/ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scality-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: ui
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scality-ui
                port:
                  number: 80
